Fix background modes

--- a/BitriseATV/Supporting Files/Info.plist
+++ b/BitriseATV/Supporting Files/Info.plist
@@ -26,6 +26,10 @@
 	<array>
 		<string>ProximaNova-Regular.otf</string>
 	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchScreen</key>
 	<dict/>
 	<key>UIRequiredDeviceCapabilities</key>
