Switch to testplans

--- a/Bitrise.xcodeproj/xcshareddata/xcschemes/BitBot.xcscheme
+++ b/Bitrise.xcodeproj/xcshareddata/xcschemes/BitBot.xcscheme
@@ -46,6 +46,12 @@
             ReferencedContainer = "container:Bitrise.xcodeproj">
          </BuildableReference>
       </CodeCoverageTargets>
+      <TestPlans>
+         <TestPlanReference
+            reference = "container:BitBotATVTests/BitBot.xctestplan"
+            default = "YES">
+         </TestPlanReference>
+      </TestPlans>
       <Testables>
          <TestableReference
             skipped = "NO"
